@@ -9,6 +9,7 @@ export(date.stamp.file.name)
 export(datestamp.filename)
 export(factor.to.numeric)
 export(fg.model.ipcw)
+export(format.p.value)
 export(geometric.mean)
 export(get.colour.palette)
 export(head.cat)
