@@ -1,3 +1,7 @@
+hedgehog v0.1.12                        2018-05-21
+==================================================
+- introduced format.p.value function
+
 hedgehog v0.1.11                        2018-05-12
 ==================================================
 - added frame parameter to stripboxplot
